# arches-rbac-permissions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  python-static-ci.yml  python-test-ci.yml
arches_inclusion_rule/: README.md  apps.py  const.py  models.py  pyproject.toml  settings.py
arches_inclusion_rule/arches_inclusion_rule/: models.py  settings.py  urls.py
arches_inclusion_rule/arches_inclusion_rule/arches_inclusion_rule/: __init__.py
arches_inclusion_rule/arches_inclusion_rule/datatypes/: inclusion_rule.py
arches_inclusion_rule/arches_inclusion_rule/management/commands/: apply_sets.py
arches_inclusion_rule/arches_inclusion_rule/migrations/: 0004_inclusionrule_querysetrule_searchrule.py  0005_delete_querysetrule_delete_searchrule.py
arches_inclusion_rule/arches_inclusion_rule/rules/: queryset_rule.py  search_rule.py
arches_inclusion_rule/arches_inclusion_rule/utils/: es_set_applicator.py  middleware.py  search.py  sets.py
arches_inclusion_rule/arches_inclusion_rule/views/: inclusion_rule_select.py
arches_inclusion_rule/datatypes/: inclusion_rule.py
arches_inclusion_rule/management/commands/: apply_sets.py
arches_inclusion_rule/media/js/bindings/: cytoscape-elk.js
arches_inclusion_rule/migrations/: 0004_inclusionrule_querysetrule_searchrule.py
arches_inclusion_rule/rules/: queryset_rule.py
arches_inclusion_rule/utils/: es_set_applicator.py
arches_inclusion_rule/views/: inclusion_rule_select.py
arches_rbac_permissions/: README.md  apps.py  casbin_policy_builder.py  es_mapping_modifier.py  models.py  pyproject.toml  service.py  settings.py  urls.py  wkrm.toml
arches_rbac_permissions/arches_rbac_permissions/: apps.py  settings.py  urls.py
arches_rbac_permissions/datatypes/: django_group.py  user.py
arches_rbac_permissions/management/commands/: apply_sets.py
arches_rbac_permissions/media/js/viewmodels/: user-select.js
arches_rbac_permissions/media/js/views/components/plugins/: group-manager-graph.js  group-manager.js
arches_rbac_permissions/media/js/views/components/search/: saved-searches.js
arches_rbac_permissions/migrations/: 0001_initial.py  0002_initial.py  0003_savedsearch.py  0004_inclusionrule_querysetrule_searchrule.py
arches_rbac_permissions/permissions/: _casbin_db.py  casbin.py
arches_rbac_permissions/pkg/extensions/datatypes/django_group/: django_group.py
arches_rbac_permissions/pkg/extensions/datatypes/user/: user.py
arches_rbac_permissions/pkg/extensions/widgets/inclusion-rule/: inclusion-rule.json
arches_rbac_permissions/pkg/extensions/widgets/user/: user.js
arches_rbac_permissions/pkg/graphs/resource_models/: Group.json  Logical Set.json  Person.json  Set.json
arches_rbac_permissions/rules/: search_rule.py
arches_rbac_permissions/templates/views/components/plugins/: group-manager.htm
arches_rbac_permissions/templates/views/components/search/: saved-searches.htm
arches_rbac_permissions/utils/: casbin.py  search.py
arches_rbac_permissions/views/: auth.py  person_user.py  saved_searches.py  user_select.py
arches_saved_search/: README.md  models.py  pyproject.toml  settings.py
arches_saved_search/arches_saved_search/: apps.py  models.py  settings.py  urls.py
arches_saved_search/arches_saved_search/migrations/: 0003_savedsearch.py
arches_saved_search/arches_saved_search/views/: saved_searches.py
arches_saved_search/views/: saved_searches.py
arches_semantic_roles/: README.md  pyproject.toml
arches_semantic_roles/arches_semantic_roles/: apps.py  service.py  settings.py
arches_semantic_roles/arches_semantic_roles/permissions/: _casbin_db.py  casbin.py  casbin_policy_builder.py
arches_semantic_roles/arches_semantic_roles/permissions/processors/: __init__.py  arches_group_processor.py  django_group_processor.py  group_permissions_processor.py  set_processor.py
arches_semantic_roles/arches_semantic_roles/views/: group_manager.py
arches_user_datatype/: README.md  apps.py  models.py  pyproject.toml  settings.py  urls.py
arches_user_datatype/arches_user_datatype/: models.py  settings.py  urls.py  wkrm.toml
arches_user_datatype/arches_user_datatype/datatypes/: django_group.py  user.py
arches_user_datatype/arches_user_datatype/media/js/viewmodels/: django-group-select.js  user-select.js
arches_user_datatype/arches_user_datatype/migrations/: 0002_create_registration_links.py
arches_user_datatype/arches_user_datatype/pkg/extensions/datatypes/django_group/: django_group.py
arches_user_datatype/arches_user_datatype/pkg/extensions/datatypes/user/: user.py
arches_user_datatype/arches_user_datatype/pkg/extensions/widgets/django_group/: django-group.js  django-group.json  django_group.json
arches_user_datatype/arches_user_datatype/pkg/extensions/widgets/user/: user.js
arches_user_datatype/arches_user_datatype/templates/: signup.htm
arches_user_datatype/arches_user_datatype/utils/: forms.py
arches_user_datatype/arches_user_datatype/views/: auth.py  django_group_select.py  person_user.py
arches_user_datatype/media/js/viewmodels/: user-select.js
arches_user_datatype/migrations/: 0002_initial.py
arches_user_datatype/pkg/extensions/widgets/user/: user.htm
arches_user_datatype/views/: auth.py  user_select.py
tests/: settings.py
tests/example/business_data/: Author_2025-08-04_11-27-51.json  Book_2025-08-04_10-32-11.json  Book_2025-08-11_05-54-50.json  Group_2025-08-11_05-54-44.json  Logical_Set_2025-08-11_05-54-34.json  Person_2025-08-04_10-32-48.json  Person_2025-08-11_05-54-28.json  Set_2025-08-11_05-54-22.json
tests/example/graphs/resource_models/: Author.json  (+1 more)
tests/example/post_sql/: add_to_group.sql
tests/example/preliminary_sql/: add_inclusion_rule.sql
tests/unit/: test_consistent_hash.py  test_const.py  test_search_rule_url.py
(+15 files in other folders)
