[project]
name = "arches_rbac_suite"
version = "0.0.1"
description = "DEclarative Workflow REndering Tool"
readme = "README.md"
authors = [
  {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
  {name = "Stuart Marshall", email = "stuart.marshall@flaxandteal.co.uk"}
]
license = {text = "GNU AGPL3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "arches_rbac_permissions",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
# tests/settings.py mirrors a host Arches project (loads the suite settings and
# registers the apps in INSTALLED_APPS) so the modules can be imported and their
# pure logic exercised. These unit tests do NOT touch the database or
# Elasticsearch; integration tests that need a live Postgres/ES/Casbin runtime
# would live elsewhere and require the full dev setup from the README.
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests/unit"]

[tool.uv.sources]
arches_inclusion_rule = { workspace = true }
arches_saved_search = { workspace = true }
arches_user_datatype = { workspace = true }
arches_semantic_roles = { workspace = true }
arches_rbac_permissions = { workspace = true }

[tool.uv.workspace]
members = [
    "arches_rbac_permissions",
    "arches_inclusion_rule",
    "arches_saved_search",
    "arches_user_datatype",
    "arches_semantic_roles",
]
